--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "expo": "~46.0.19",
+    "expo-constants": "~13.2.4",
     "expo-status-bar": "~1.4.0",
+    "nativewind": "^2.0.11",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-paper": "4.9.2",
-    "@expo/vector-icons": "^13.0.0",
-    "expo-constants": "~13.2.4"
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
